[package]
name = "chronosys-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
chronosys-common = { path = "../chronosys-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "chronosys"
path = "src/main.rs"
