[package]
name = "chronosys"
version = "0.1.0"
edition = "2021"
authors = ["Tom Mead"]
description = "Linux system monitor and persistent capture tool"
exclude = ["tests"]

[package.metadata.deb]
maintainer = "Tom Mead"
assets = [
    ["target/release/chronosys", "/usr/bin/", "755"],
]

[dependencies]
chronosys-common = { path = "../chronosys-common", features = ["user"] }
aya = { workspace = true }
aya-log = { workspace = true }
log = "0.4.33"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"

[dependencies.env_logger]
version = "0.11"
optional = true

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook","user-hooks",] }
pretty_assertions = "1.4.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
chronosys-ebpf = { path = "../chronosys-ebpf" }

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[features]
default = ["logging"]
logging = ["dep:env_logger"]